syntax = "proto3";

package protos;

import "devices.proto";
import "google/protobuf/empty.proto";

option java_package = "io.github.sergkhram.proto";
option java_multiple_files = true;
option java_outer_classname = "HostsProto";

service HostsService {
  rpc getHostRequest(HostId) returns (HostProto) {};
  rpc getHostsListRequest(GetHostsListRequest) returns (GetHostsListResponse) {};
  rpc postHostRequest(PostHostRequest) returns (HostProto) {}
  rpc updateHostRequest(UpdateHostRequest) returns (HostProto) {}
  rpc deleteHostRequest(HostId) returns (google.protobuf.Empty) {}
  rpc postHostConnectionRequest(HostId) returns (google.protobuf.Empty) {}
  rpc postHostDisconnectionRequest(HostId) returns (google.protobuf.Empty) {}
  rpc getUpdateHostStateWithDeviceRemoval(UpdateHostStateRequest) returns (google.protobuf.Empty) {}
}

message HostId {
  string id = 1;
}

message GetHostsListRequest {
  string stringFilter = 1;
}

message GetHostsListResponse {
  repeated HostProto hosts = 1;
}

message HostProto {
  string id = 1;
  string name = 2;
  string address = 3;
  int32 port = 4;
  bool isActive = 5;
  repeated DeviceProto devices = 6;
}

message PostHostRequest {
  string name = 1;
  string address = 2;
  int32 port = 3;
}

message UpdateHostRequest {
  string id = 1;
  string name = 2;
  string address = 3;
  int32 port = 4;
}

message UpdateHostStateRequest {
  string id = 1;
  bool deleteDevices = 2;
}